--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -10,22 +10,11 @@ header .menu__open {display: none;}
 .header__nav__mo {display: none;}
 
 
-
-
-/* header__nav hover */
-/* .header__nav ul li .char {display: inline-block; position: relative; color: transparent; overflow: hidden;}
-.header__nav ul li .char:before, .header__nav ul li .char:after {position: absolute; top: 0; left: 0; opacity: .6; content: attr(data-char); transition: transform .35s; transition-delay: calc(30ms * var(--char-index));}
-.header__nav ul li .char:before {transform: translateY(100%);}
-.header__nav ul li:hover .char:before {transform: translateY(0%); opacity: 1;}
-.header__nav ul li:hover .char:after {transform: translateY(100%); opacity: 0;} */
-
-
 /*  820 ~ 501 */
 @media screen and (max-width: 820px) {
 
-
     header {padding: 3% 5%; mix-blend-mode: normal;}
-    
+    /* 모바일 버전 토글 메뉴 버튼 */
     .header__nav__mo {display: block; width: 32px; height: 32px; z-index: 1001; transition: top .5s; }
     .header__nav__mo span {display: block; position: relative; width: 100%; height: 1px; background-color:var(--white); transition: .3s;}
     .header__nav__mo span:before, 
@@ -43,9 +32,6 @@ header .menu__open {display: none;}
    header .header__nav__mo.active span {background-color:transparent; z-index: 1001;}
    header .header__nav__mo.active span:before {transform: rotate(45deg) translate(5px, 5px); top:-4px; background-color:var(--black);}
    header .header__nav__mo.active span:after {transform: rotate(-45deg) translate(2px, -1px); bottom: -4px; background-color:var(--black);}
-
-
-    
 
 }
 
