--- a/src/assets/css/setting/font.css
+++ b/src/assets/css/setting/font.css
@@ -5,6 +5,13 @@
     font-weight: 400;
     font-style: normal;
 }
+@font-face {
+    font-family: 'Pretendard';
+    src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-blod.woff') format('woff');
+    font-weight: 600;
+    font-style: normal;
+}
+
 
 
 .cormorant {font-family: 'Cormorant Infant', serif; font-style: italic;}
