--- a/src/assets/css/setting/vars.css
+++ b/src/assets/css/setting/vars.css
@@ -4,25 +4,16 @@
     --mainKor-font: "Pretendard";
 
     --mainBg-color: #111;
-    --subBg100: #cdc0b1;
-    --subBg200: #afa395;
-    --subBg300: #81887c;
-    --subBg400: #afa7a2;
-    --subBg500: #a6afa2;
 
     --white: #fff;
     --black: #000;
-    --black100: #2b2b2b;
-    --black200: #434343;
-    --black300: #686868;
-    --black400: #e0e0e0;
 
     --green: #00dca7;
     --blue: #1766fe;
 
     /* 기본 폰트 설정 */
     font-family: var(--mainEng-font), var(--mainKor-font);
-    font-size: 16px;
+    font-size: 62.5%;
     line-height: 1.5;
     font-weight: 400;
    
@@ -37,9 +28,12 @@
 
 }
 
+@media screen and (max-width: 1024px) {
+    :root {font-size: 60%;}
+}
 @media (max-width: 800px) {
     :root {
-        font-size: 14px;
+        font-size: 100%;
         line-height: 1.4;
     }
 }
